# electrode-web

./: .gitignore  Cargo.toml  README.md  clippy.toml  eslint.config.js  flake.nix  package-lock.json  package.json
.github/workflows/: ci-pages.yml
apps/web/: package.json  vite.config.ts
apps/web/src/lib/: gcs.ts  (+1 more)
crates/electrode-command-authority/: Cargo.toml  README.md
crates/electrode-command-authority/config/: public-lan-parameter-limits.json
crates/electrode-command-authority/examples/: param_get_probe.rs
crates/electrode-command-authority/src/: firmware.rs  firmware_gate.rs  lib.rs  policy.rs  runtime.rs  velocity_budget.rs
crates/electrode-command-authority/tests/: policy.rs
crates/electrode-fake-sim/: Cargo.toml
crates/electrode-fake-sim/src/: main.rs
crates/electrode-ground-bridge/: Cargo.toml
crates/electrode-ground-bridge/src/: commands.rs  config.rs  log.rs  main.rs  state.rs  synapse_decode.rs  topics.rs  websocket.rs  zenoh_bridge.rs
crates/electrode-ground-station/: Cargo.toml
crates/electrode-ground-station/src/: autopilot.rs  autopilot_link.rs  devices.rs  joystick.rs  main.rs  mapping.rs  sim_bridge.rs  simulation.rs  supervisor.rs  zenoh_hub.rs
crates/electrode-log/: Cargo.toml
crates/electrode-log/src/: lib.rs
crates/electrode-manual-control-bridge/: Cargo.toml
crates/electrode-ppm-bridge/: Cargo.toml
crates/electrode-web-core/: Cargo.toml
docs/: architecture.md  manual_control.md  message_lifecycle.md  ui-guide.md
models/: FixedWingTrueSILFull.mo
scripts/: capture-docs-ui.mjs  check-rust-file-lines.mjs
(+15 files in other folders)
