[package]
name = "electrode-command-authority"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Isolated browser-to-vehicle command authority for Electrode Ground Station"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
flatbuffers.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
synapse_fbs.workspace = true
thiserror.workspace = true
tracing.workspace = true
zenoh.workspace = true
