[package]
name = "electrode-fake-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fake flying vehicle that publishes Synapse FlatBuffers over Zenoh for testing electrode"

[lints]
workspace = true

[[bin]]
name = "electrode-fake-sim"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
electrode-web-core = { path = "../electrode-web-core" }
flatbuffers.workspace = true
synapse_fbs.workspace = true
zenoh.workspace = true
